{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 5,
  "lineage": "ed47de1c-19a8-6a18-c587-ca67c871900f",
  "resources": [
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:security-group/sg-0fb58dfa70d3919fb",
            "description": "alb security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb58dfa70d3919fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "383798767483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-mahalohub-alb-sg",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mahalohub-alb-sg",
              "Terraform": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4192761206",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fb58dfa70d3919fb",
            "security_group_rule_id": "sgr-03b7047fa5d7f4bc7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic from internet",
            "from_port": 80,
            "id": "sgrule-2426374243",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fb58dfa70d3919fb",
            "security_group_rule_id": "sgr-027f02dd087db5c1a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS traffic from internet",
            "from_port": 443,
            "id": "sgrule-194035995",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fb58dfa70d3919fb",
            "security_group_rule_id": "sgr-07d580d81b2bc72d0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:security-group/sg-0eeab59f424db3447",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eeab59f424db3447",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0fb58dfa70d3919fb"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-mahalohub-ecs",
            "name_prefix": "",
            "owner_id": "383798767483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-mahalohub-app-sg",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mahalohub-app-sg",
              "Terraform": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2216250280",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eeab59f424db3447",
            "security_group_rule_id": "sgr-03572f79c270e1df3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_sg.aws_security_group.this",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-1680744422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eeab59f424db3447",
            "security_group_rule_id": "sgr-06d0dbc93f61f377b",
            "self": false,
            "source_security_group_id": "sg-0fb58dfa70d3919fb",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:383798767483:listener/app/dev-mahalohub-backend/49634940d59b7e8b/d23b8672fec571e3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:383798767483:targetgroup/dev-mahalohub-backend/0b6e44f5b4902f1e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:383798767483:listener/app/dev-mahalohub-backend/49634940d59b7e8b/d23b8672fec571e3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:383798767483:loadbalancer/app/dev-mahalohub-backend/49634940d59b7e8b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.alb_sg.aws_security_group.this",
            "module.backend_alb.aws_alb_target_group.default",
            "module.backend_alb.aws_lb.default",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.backend_alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:383798767483:targetgroup/dev-mahalohub-backend/0b6e44f5b4902f1e",
            "arn_suffix": "targetgroup/dev-mahalohub-backend/0b6e44f5b4902f1e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:383798767483:targetgroup/dev-mahalohub-backend/0b6e44f5b4902f1e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-mahalohub-backend",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-mahalohub-backend"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mahalohub-backend"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:383798767483:loadbalancer/app/dev-mahalohub-backend/49634940d59b7e8b",
            "arn_suffix": "app/dev-mahalohub-backend/49634940d59b7e8b",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-mahalohub-backend-1146122896.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:383798767483:loadbalancer/app/dev-mahalohub-backend/49634940d59b7e8b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-mahalohub-backend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fb58dfa70d3919fb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-067a254fd39400585"
              },
              {
                "subnet_id": "subnet-0a5ce22a42e94afa7"
              }
            ],
            "subnets": [
              "subnet-067a254fd39400585",
              "subnet-0a5ce22a42e94afa7"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-mahalohub-backend"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mahalohub-backend"
            },
            "vpc_id": "vpc-071c5ea6f5f888c9a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.alb_sg.aws_security_group.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:383798767483:listener/app/dev-mahalohub-frontend/e760548b5a6f6c8d/3edcc083af35329a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:383798767483:targetgroup/dev-mahalohub-frontend/fce3496e5408529d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:383798767483:listener/app/dev-mahalohub-frontend/e760548b5a6f6c8d/3edcc083af35329a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:383798767483:loadbalancer/app/dev-mahalohub-frontend/e760548b5a6f6c8d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.alb_sg.aws_security_group.this",
            "module.frontend_alb.aws_alb_target_group.default",
            "module.frontend_alb.aws_lb.default"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:383798767483:targetgroup/dev-mahalohub-frontend/fce3496e5408529d",
            "arn_suffix": "targetgroup/dev-mahalohub-frontend/fce3496e5408529d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:383798767483:targetgroup/dev-mahalohub-frontend/fce3496e5408529d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-mahalohub-frontend",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-mahalohub-frontend"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mahalohub-frontend"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:383798767483:loadbalancer/app/dev-mahalohub-frontend/e760548b5a6f6c8d",
            "arn_suffix": "app/dev-mahalohub-frontend/e760548b5a6f6c8d",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-mahalohub-frontend-190109287.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:383798767483:loadbalancer/app/dev-mahalohub-frontend/e760548b5a6f6c8d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-mahalohub-frontend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fb58dfa70d3919fb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-067a254fd39400585"
              },
              {
                "subnet_id": "subnet-0a5ce22a42e94afa7"
              }
            ],
            "subnets": [
              "subnet-067a254fd39400585",
              "subnet-0a5ce22a42e94afa7"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-mahalohub-frontend"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mahalohub-frontend"
            },
            "vpc_id": "vpc-071c5ea6f5f888c9a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.alb_sg.aws_security_group.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_postgres_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:security-group/sg-06edd6e0449e2df9f",
            "description": "Allow access to the RDS database instance.",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0eb35fd3e7afb0c86",
                  "sg-0eeab59f424db3447"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06edd6e0449e2df9f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eb35fd3e7afb0c86",
                  "sg-0eeab59f424db3447"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dev-mahalohub-rds-sg",
            "name_prefix": "",
            "owner_id": "383798767483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-mahalohub-rds-postgres-sg",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mahalohub-rds-postgres-sg",
              "Terraform": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_sg.aws_security_group.this",
            "module.ssh_security_group.aws_security_group.allow_ssh",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:security-group/sg-0eb35fd3e7afb0c86",
            "description": "Allow all SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb35fd3e7afb0c86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "383798767483",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:network-acl/acl-09ca6cb35bea1be02",
            "default_network_acl_id": "acl-09ca6cb35bea1be02",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09ca6cb35bea1be02",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "383798767483",
            "subnet_ids": [
              "subnet-067a254fd39400585",
              "subnet-0a5ce22a42e94afa7",
              "subnet-0b8c91f35adf74ddb",
              "subnet-0bc8a34e5e64a1d3c"
            ],
            "tags": {
              "Name": "dev-mahalohub-vpc"
            },
            "tags_all": {
              "Name": "dev-mahalohub-vpc"
            },
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:route-table/rtb-0fb882704d22bb0e0",
            "default_route_table_id": "rtb-0fb882704d22bb0e0",
            "id": "rtb-0fb882704d22bb0e0",
            "owner_id": "383798767483",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-mahalohub-vpc"
            },
            "tags_all": {
              "Name": "dev-mahalohub-vpc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:security-group/sg-01ebf3bb756d40112",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01ebf3bb756d40112",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "383798767483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-mahalohub-vpc"
            },
            "tags_all": {
              "Name": "dev-mahalohub-vpc"
            },
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:internet-gateway/igw-042dafd500f863723",
            "id": "igw-042dafd500f863723",
            "owner_id": "383798767483",
            "tags": {
              "Name": "dev-mahalohub-vpc"
            },
            "tags_all": {
              "Name": "dev-mahalohub-vpc"
            },
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-042dafd500f863723",
            "id": "r-rtb-019a5c0e59888113e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-019a5c0e59888113e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:route-table/rtb-07e340578a35ee82e",
            "id": "rtb-07e340578a35ee82e",
            "owner_id": "383798767483",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-mahalohub-vpc"
            },
            "tags_all": {
              "Name": "dev-mahalohub-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:route-table/rtb-070917e94937e7152",
            "id": "rtb-070917e94937e7152",
            "owner_id": "383798767483",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-mahalohub-vpc"
            },
            "tags_all": {
              "Name": "dev-mahalohub-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:route-table/rtb-019a5c0e59888113e",
            "id": "rtb-019a5c0e59888113e",
            "owner_id": "383798767483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042dafd500f863723",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-mahalohub-vpc"
            },
            "tags_all": {
              "Name": "dev-mahalohub-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ef019cb9f9bb428",
            "route_table_id": "rtb-07e340578a35ee82e",
            "subnet_id": "subnet-0bc8a34e5e64a1d3c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a28f4cd50333ebd4",
            "route_table_id": "rtb-070917e94937e7152",
            "subnet_id": "subnet-0b8c91f35adf74ddb"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0734776fb6399dee9",
            "route_table_id": "rtb-019a5c0e59888113e",
            "subnet_id": "subnet-067a254fd39400585"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0052a17091400a3ad",
            "route_table_id": "rtb-019a5c0e59888113e",
            "subnet_id": "subnet-0a5ce22a42e94afa7"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:subnet/subnet-0bc8a34e5e64a1d3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc8a34e5e64a1d3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383798767483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-mahalohub-vpc"
            },
            "tags_all": {
              "Name": "dev-mahalohub-vpc"
            },
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:subnet/subnet-0b8c91f35adf74ddb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8c91f35adf74ddb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383798767483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-mahalohub-vpc"
            },
            "tags_all": {
              "Name": "dev-mahalohub-vpc"
            },
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:subnet/subnet-067a254fd39400585",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067a254fd39400585",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383798767483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-mahalohub-vpc"
            },
            "tags_all": {
              "Name": "dev-mahalohub-vpc"
            },
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:subnet/subnet-0a5ce22a42e94afa7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5ce22a42e94afa7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383798767483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-mahalohub-vpc"
            },
            "tags_all": {
              "Name": "dev-mahalohub-vpc"
            },
            "vpc_id": "vpc-071c5ea6f5f888c9a"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:383798767483:vpc/vpc-071c5ea6f5f888c9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ca6cb35bea1be02",
            "default_route_table_id": "rtb-0fb882704d22bb0e0",
            "default_security_group_id": "sg-01ebf3bb756d40112",
            "dhcp_options_id": "dopt-062bea80943e23dc4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071c5ea6f5f888c9a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb882704d22bb0e0",
            "owner_id": "383798767483",
            "tags": {
              "Name": "dev-mahalohub-vpc"
            },
            "tags_all": {
              "Name": "dev-mahalohub-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}